test/Fail/OpaqueSibling.err
OpaqueSibling.agda:23.16-20: error: [UnequalTerms]
The terms
  h
and
  3
are not equal at type Nat
when checking that the expression refl has type k ≡ 6
